01/08 태그 업데이트

--- a/study.html
+++ b/study.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="ko" dir="ltr">
+<html lang="kr" dir="ltr">
   <head>
+    <link
+      rel="shortcut icon"
+      href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico"
+    />
     <meta charset="utf-8" />
     <title>HOME</title>
+    <meta name="description" content="This is My first website." />
   </head>
   <body>
     <h1>Hello world!</h1>
     <a href="http://google.com" target="_blank">Google.com</a><br />
     <img src="img/close.jpg" alt="test_img" />
+    <p>my name is <abbr title="puppy">yeah</abbr></p>
+    <cite>안녕!</cite>
+    <p>안뇽<mark>안녕</mark></p>
+    <p>안뇽<strong>안녕</strong></p>
+    <p>안녕<sub>안뇽</sub></p>
+    <p>안녕<sup>안뇽</sup></p>
+    <audio
+      controls="enabled"
+      autoplay="enabled"
+      src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"
+    ></audio>
+    <dialog open>
+      <p>all!</p>
+    </dialog>
   </body>
 </html>
