편집 테스트 새로운 글 작성

--- a/html/study.html
+++ b/html/study.html
@@ -21,11 +21,14 @@
     <p>안녕<sup>안뇽</sup></p>
     <audio
       controls="enabled"
-      autoplay="enabled"
       src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"
     ></audio>
     <dialog open>
       <p>all!</p>
     </dialog>
+    <form class="" action="index.html" method="post">
+      <input type="color" name="" value="" />
+      <input type="password" name="" value="" />
+    </form>
   </body>
 </html>
